# find-evil

./: .env.example  .gitignore  CLAUDE.md  DEVPOST_SUBMISSION.md  Dockerfile  Dockerfile.sift  Makefile  README.md  SUBMISSION.md  docker-compose.sift.yml  docker-compose.yml  package.json  pyproject.toml  status.md
.github/workflows/: test.yml
assets/: generate-narration.mjs  narration.srt  narration.txt  recording-find-evil.md  transcribe-narration.mjs
demo/: VIDEO_SCRIPT.md  audit_trail_sample.jsonl  live_investigation.md  run_investigation.py  tamper_demo.py  validate_submission.py  video_demo.py
demo/screenshots/: 01-investigation.txt  02-tamper.txt
docs/: accuracy_report.md  dataset_documentation.md  evidence_integrity_approach.md  sans-submission-answers.md  submission-gaps-2026-04-29.md  submission-readiness-2026-04-24.md  try_it_out.md
docs/guides/: docker-sift-setup.md  (+1 more)
evidence/: Application_small.evtx  README.md  SYSTEM  find_evil_rules.yar  populate_samples.py
output/: ir_report.md
scripts/: build_audit_sample.py  capture-demo-screenshots.ps1  demo-runner.ps1  docker-smoke-test.sh  live-demo-display.py  record-live-investigation.ps1  record-walkthrough.ps1  test-live-mcp.sh  walkthrough-capture.ps1
tests/: conftest.py  test_audit.py  test_docker_smoke.py  test_docs_consistency.py  test_drs_gate.py  test_evidence_sealing_edge_cases.py  test_hash_daemon.py  test_integration.py  test_lateral_privesc.py  test_real_evidence.py  test_real_registry.py  test_real_yara.py  test_scenario.py  test_security_bypass.py  test_session_manager.py
(+30 files in other folders)
