[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "find-evil"
version = "0.1.0"
description = "Evidence Integrity Enforcer — DFIR MCP Server for SIFT Workstation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Steve Harlow", email = "sgharlow@gmail.com" },
]
keywords = ["dfir", "forensics", "mcp", "sift", "evidence-integrity"]

dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# SIFT tools — install on workstation, not required for dev/testing
sift = [
    "volatility3>=2.5.0",
    "python-evtx>=0.7.4",
    "yara-python>=4.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
find-evil = "find_evil.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/find_evil"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
